# panel-codes-service

./: .gitlab-ci.yml  Dockerfile  README.md  app.py  app_configuration.json  octue.yaml  pyproject.toml  setup.py  twine.json
.github/workflows/: cd.yaml  release.yml
tests/: test_deployment.py
tests/xfoil/: test_xfoil.py
tests/xfoil/cases/naca0012/: input_values.json
tests/xfoil/cases/naca0012/data/input/: manifest.json  values.json
tests/xfoil/cases/naca0018/: configuration_values.json  input_values.json
xfoil_module/: routines.py
